--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
     }
   ],
   "require": {
-    "php": ">=5.6.0",
-    "contao/core-bundle": "^4.4",
-    "contao/calendar-bundle": "^4.4",
+    "php": "^8.1",
+    "contao/core-bundle": "^4.13",
+    "contao/calendar-bundle": "^4.13",
     "menatwork/contao-multicolumnwizard-bundle": "^3.4",
     "terminal42/notification_center": "^1.5",
     "terminal42/contao-leads": "^1.4"
@@ -42,5 +42,10 @@
   },
   "extra": {
     "contao-manager-plugin": "Kmielke\\CalendarExtendedBundle\\ContaoManager\\Plugin"
+  },
+  "config": {
+    "allow-plugins": {
+      "php-http/discovery": true
+    }
   }
 }
