Add compatibility with Contao 5.3

--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
   ],
   "require": {
     "php": "^8.1",
-    "contao/core-bundle": "^4.13",
-    "contao/calendar-bundle": "^4.13",
+    "contao/core-bundle": "^4.13 || ^5.3",
+    "contao/calendar-bundle": "^4.13 || ^5.3",
     "menatwork/contao-multicolumnwizard-bundle": "^3.4",
     "terminal42/notification_center": "^1.5",
     "terminal42/contao-leads": "^1.4"
